--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
     "@mantine/core": "^8.2.4",
     "@mantine/hooks": "^8.2.4",
     "@tabler/icons-react": "^3.34.1",
@@ -19,6 +22,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-resizable": "^3.0.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
