variant save fixed

--- a/.env
+++ b/.env
@@ -1,1 +1,26 @@
+# Version
 VITE_VERSION=0.1
+
+# Backend API Configuration
+VITE_API_URL=http://localhost:3001/api
+
+# Environment
+VITE_NODE_ENV=development
+
+# Feature Flags
+VITE_ENABLE_AI_FEATURES=true
+VITE_ENABLE_OFFLINE_MODE=true
+VITE_ENABLE_AUTO_SAVE=true
+
+# Auto-save interval in milliseconds
+VITE_AUTO_SAVE_INTERVAL=30000
+
+# API retry configuration
+VITE_API_RETRY_ATTEMPTS=3
+VITE_API_RETRY_DELAY=1000
+
+# WebLLM Configuration
+VITE_WEBLLM_MODEL=Llama-3.2-1B-Instruct-q4f32_1-MLC
+
+# Transformers.js Configuration
+VITE_TRANSFORMERS_MODEL=Xenova/all-MiniLM-L6-v2
