--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@mantine/core": "^8.2.4",
     "@mantine/hooks": "^8.2.4",
+    "@mlc-ai/web-llm": "^0.2.79",
     "@tabler/icons-react": "^3.34.1",
+    "@xenova/transformers": "^2.17.2",
+    "nanoid": "^5.1.5",
     "re-resizable": "^6.11.2",
     "react": "^19.1.1",
     "react-dnd": "^16.0.1",
@@ -23,7 +26,8 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-resizable": "^3.0.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
